# typebee-rs

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: user.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/errors/: db.rs  mod.rs  user.rs
common/src/models/: user.rs
db/: Cargo.toml
db/migrations/2019-10-21-090418_create_user/: up.sql
db/src/: lib.rs  schema.rs
db/src/models/: mod.rs  user.rs
