[package]
name = "api"
version = "0.1.0"
authors = ["Harsh <harsh.pathak53@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
common = { path = "../common" }
actix-web = "1.0"
futures = "0.1.28"
jsonwebtoken = "6.0.1"