[package]
name = "db"
version = "0.1.0"
authors = ["Harsh <harsh.pathak53@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
common = { path = "../common" }
rust-argon2 = "0.5"
rand = "0.7.2"